# github-user-cli

./: Cargo.toml  Readme.md
src/: cache.rs  github.rs  main.rs  models.rs  service.rs
src/snapshots/: github_user_cli__github__tests__get_repositories_success_with_token_test.snap  github_user_cli__github__tests__get_repositories_success_without_token_test.snap
