[package]
name = "github-user-cli"
version = "0.1.0"
authors = ["cobbinma <cobbinma@gmail.com>"]
edition = "2018"
description = "find a github user's top repositories"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cobbinma/github-user-cli"
categories = [
    "command-line-interface",
    "command-line-utilities",
    "development-tools",
]
keywords = ["github-api"]

[dependencies]
clap = "2.33.3"
async-std = {version="1.8.0", features=["attributes"]}
serde_derive = "1.0.118"
serde = "1.0.118"
surf = "2.1.0"
async-trait = "0.1.42"
serde_json = "1.0.61"
log = "0.4.11"
env_logger = "0.8.2"
serde_yaml = "0.8.15"
colored = "2.0.0"
base64 = "0.13.0"

[dev-dependencies]
httpmock = "0.5.2"
insta = "1.5.2"
